--- a/book.bib
+++ b/book.bib
@@ -498,3 +498,26 @@ publisher={University of Prince Edward Island}
   year={1985},
   publisher={CA: sage}
 }
+
+
+@article{hansen2020systematic,
+  title={A systematic review of field experiments in public administration},
+  author={Hansen, Jesper Asring and Tummers, Lars},
+  journal={Public Administration Review},
+  volume={80},
+  number={6},
+  pages={921--931},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+@article{hershey1991digging,
+  title={Digging deeper into Helmont's famous willow tree experiment},
+  author={Hershey, David R},
+  journal={The American Biology Teacher},
+  volume={53},
+  number={8},
+  pages={458--460},
+  year={1991},
+  publisher={JSTOR}
+}
