--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,9 @@
 \usepackage{booktabs}
 \usepackage{amsthm}
+\usepackage{float}
+\usepackage{wrapfig}
+\usepackage{caption}
+
 
 \makeatletter
 \def\thm@space@setup{%
