--- a/02-ScienceGoals-Methods-Knowledge.Rmd
+++ b/02-ScienceGoals-Methods-Knowledge.Rmd
@@ -120,6 +120,10 @@ Traditionally there are three ways to choose between alternative methods.
 
 See \@ref(smoke-debate) for an example of how reason-based methods are not always easy to implement while at the same time, outcome-oriented methods led the mainstream of an important debate.
 
+```{r, include=knitr::is_latex_output(), echo = F}
+knitr::asis_output('\\newpage')
+```
+
 ## Examples
 
 ### Neptune and Vulcan {#neptune-vulcan}
@@ -189,6 +193,18 @@ cat(
 </figure>'
 )
 ```
+
+```{r, include=knitr::is_latex_output(), echo = F}
+knitr::asis_output('\\begin{wrapfigure}{R}{.25\\textwidth}  
+ \\begin{center}
+    \\includegraphics[width=.22\\textwidth]{Figures/Arthur_Stanley_Eddington.jpg}  
+  \\captionsetup{labelformat=empty}
+  \\caption{Sir Arthur Stanley Eddington (1882–1944).} 
+\\end{center}
+\\end{wrapfigure}
+\\addtocounter{figure}{-1}')
+```
+
 
 The following example also relates to falsification (see \@ref(falsification)) which is taught in the next Chapter. However, this is also a good example of how a good theory should make definite predictions such as those from Einstein's theory of general relativity.
 
