--- a/index.Rmd
+++ b/index.Rmd
@@ -35,19 +35,19 @@ During this course, students will learn by example different layers of the scien
 
 **Disclaimer**
 
-Although the impact and extension of the topics addressed in this course are broad and diverse, its duration is limited. Hence the scope and depth of the contents are restricted. Consequently, several topics on Philosophy of Science are tackled superficially while some others are completely ignored. Such philosophical questions are handle from a practical data science point of view. Similarly, Data Ethics is a relatively new matter in continuous evolution. Therefore we will try to cope with the main issues in the most practical way.
+Although the impact and extension of the topics addressed in this course are broad and diverse, its duration is limited. Hence the scope and depth of the contents are restricted. Consequently, several topics on Philosophy of Science are tackled superficially while some others are completely ignored. Such philosophical questions are handled from a practical data science point of view. Similarly, Data Ethics is a relatively new matter in continuous evolution. Therefore we will try to cope with the main issues in the most practical way.
 
-**Learning outcomes:**
+**Learning outcomes**
 
-In line with the European Qualitity Framework, Bachelor degrees require a critical understanding of theories and principles, while Master degrees involves higher specialised knowledge and critical awareness of knowledge issues in a field. In this case, the field at issue is data science and the contents will tackle philosophical and ethical issues concerning data science. The aim is to provide students with a better understanding of method justification, which increases their knowledge about such methods, their scope, purpose and relation to other methods.
+In line with the European Qualitity Framework, Bachelor degrees require a critical understanding of theories and principles, while Master degrees involve higher specialised knowledge and critical awareness of knowledge issues in a field. In this case, the field at issue is data science and the contents will tackle philosophical and ethical issues concerning data science. Therefore, the aim is to provide students with a better understanding of method justification, to increase their knowledge about such methods, their scope, purpose and relation to other practices.
 
 - Get familiar with the scientific goals and methods.
-- Learn the most common data science and visualization misconduct problems.
+- Learn the most common data science misconduct problems.
 - Critically evaluate ethical issues and method choice.
 
 **About this course**
 
-A great part of the first chapters of this course is inspired by the book from Prof. Dr Lars-Göran Johansson [@johansson2016philosophy] and the works of Prof. Dr Till Grüne-Yanoff [@grune2014teaching] as well as its great course at EDX on "Philosophy of Science for Engineers and Scientists". Regarding the second part of the course covering data ethics. I would like to thank the Univerisity of Michigan for its online courses (from which I was already a fan during my PhD, especially Applied Data Science) and especially Prof. Dr H. V. Jagadish for its course on Data Science Ethics which inspired me on the contents and examples of this course. Moreover, this last part of the course would not have been possible without many relevant books on the topics tackled in this course (see References). Including The Book of Why [@book-of-why]; Ethics and Data Science [@loukides2018ethics]; Philosophy of Natural Science [@hempel-pos]; How charts lie [@cairo2019charts]; Automating inequality [@eubanks2018automating]. I hope any resemblance or imitation is seen as an act of flattery.
+A considerable part of the first chapters of this course is inspired by the book from Prof. Dr Lars-Göran Johansson [@johansson2016philosophy] and the educational works of Prof. Dr Till Grüne-Yanoff [@grune2014teaching], such as his great course at EDX on "Philosophy of Science for Engineers and Scientists". Regarding the second part of the course, which covers data ethics, I would like to thank the Univerisity of Michigan, for its online courses (from which I was already a fan during my PhD, especially Applied Data Science) and especially Prof. Dr H. V. Jagadish for its course on Data Science Ethics which inspired me on the contents and examples of this course. Moreover, this last part of the course would not have been possible without many relevant books on the topics tackled in this course (see References). Including The Book of Why [@book-of-why]; Ethics and Data Science [@loukides2018ethics]; Philosophy of Natural Science [@hempel-pos]; How charts lie [@cairo2019charts]; Automating inequality [@eubanks2018automating]. I hope any resemblance or imitation is seen as an act of flattery.
 
 **About this class book**
 
@@ -55,7 +55,7 @@ This class book was made thanks to the great tutorial available on the book ["Op
 
 **Licensed under CC BY-NC-SA 4.0**
 
-The book is released under a creative commons [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/) license. This means that you are free to: 
+The book is released under [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/) license. This means that you are free to: 
 
 - **Share**: copy and redistribute the material in any medium or format.
 - **Adapt**: remix, transform, and build upon the material.
