--- a/07-ExtraMaterial.Rmd
+++ b/07-ExtraMaterial.Rmd
@@ -8,7 +8,11 @@ Although many historical examples are given to the students to illustrate the di
 
 ## Theory-relatedness of observations
 
-"A related topic is the theory-relatedness of observations; some have claimed that there are no such things as fully theory-independent observations. If true, it would undermine the possibility of objectivity of science and force us to accept strong relativism. I believe that this disastrous consequence can be avoided and that there really is a basis of theory-neutral data, also in the humanities." — Philosophy of Science for Scientists.
+In the philosophy of science, observations are said to be "theory-laden" when they are affected by the theoretical presuppositions held by the investigator. This thesis of theory-ladenness is associated with the works of Thomas Kuhn and perhaps first put forth by Pierre Duheem [@sep-science-theory-observation].
+
+> "A related topic is the theory-relatedness of observations; some have claimed that there are no such things as fully theory-independent observations. If true, it would undermine the possibility of objectivity of science and force us to accept strong relativism. I believe that this disastrous consequence can be avoided and that there really is a basis of theory-neutral data, also in the humanities." -- [johansson2016philosophy].
+
+> The question then arises: is it just as easy to distinguish between theoretical statements and observational statements? The answer is no, as can be seen from the previous examples regarding how unconscious background beliefs can affect what is observed and reported even a in a very simple tasks such as time measurements. -- [johansson2016philosophy].
 
 ## Gettier problems
 
