--- a/book.bib
+++ b/book.bib
@@ -36,6 +36,17 @@ life-dates = { 1966 -  },
 catalogue-url = { https://nla.gov.au/nla.cat-vn523883 },
 }
 
+@InCollection{sep-science-theory-observation,
+	author       =	{Boyd, Nora Mills and Bogen, James},
+	title        =	{{Theory and Observation in Science}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/win2021/entries/science-theory-observation/}},
+	year         =	{2021},
+	edition      =	{{W}inter 2021},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
 
 @book{johansson2016philosophy,
   title={Philosophy of science for scientists},
